--- a/blog.html
+++ b/blog.html
@@ -105,16 +105,16 @@
 										</li>
 										
 										<li class="nav-item">
-											<a href="privacy-policy.html" class="nav-link">Privacy Policy Page</a>
+											<a href="privacy-policy.html" class="nav-link">Privacy Policy</a>
 										</li>
 										<li class="nav-item">
-											<a href="terms-conditions.html" class="nav-link">Terms & Conditions Page</a>
+											<a href="terms-conditions.html" class="nav-link">Terms & Conditions</a>
 										</li>
 										<li class="nav-item">
-											<a href="404.html" class="nav-link">Error Page</a>
+											<a href="404.html" class="nav-link">Error</a>
 										</li>
 										<li class="nav-item">
-											<a href="coming-soon.html" class="nav-link">Coming Soon Page</a>
+											<a href="contact-us.html" class="nav-link">Contact Us</a>
 										</li>
 									</ul>
 								</li>
@@ -406,7 +406,6 @@
 							</h3>
 						</div>
 					</div>
-
 					<div class="col-md-12">
 						<div class="pagination">
 							<a href="#" class="next page-count hover-style">
