--- a/sign-up.html
+++ b/sign-up.html
@@ -244,242 +244,104 @@
 		<div class="page-banner-area bg-black bg-img" data-background="./assets/images/banner-bg-shape.png">
 			<div class="container mw-1680">
 				<div class="page-banner-content">
-					<h2>Our Services Details</h2>
+					<h2>Sign Up</h2>
 					<ul class="ps-0 mb-0 list-unstyled justify-content-center page-breadcrumb d-flex flex-wrap gap-4">
 						<li>
 							<a href="#">Home</a>
 						</li>
 						<li>
-							<span class="active">Service Details</span>
+							<span class="active">Sign Up</span>
 						</li>
 					</ul>
 				</div>
 			</div>
 		</div>
 		<!--=== End Page Banner Area ===-->
-
-		<!--=== Start Services Area ===-->
-		<div class="service-details-area ptb-100">
+	
+		<!--=== Start Sign Up Area ===-->
+		<div class="sign-up-area ptb-100">
 			<div class="container">
-				<div class="row">
-					<div class="col-lg-8">
-						<div class="service-details-content">
-							<div class="service-details-img">
-								<img src="assets/images/services-img-1.jpg" alt="services-img">
-							</div>
-							<h2>Strategy Consulting</h2>
-							<p>Creating high-quality video content, including promotional videos tutorials and advertisements & utilizing them part of digital marketing campaigns across various platforms. Collaborating with influential individuals or personalities on social media to promote products/services and reach a wider audience.</p>
-							<p>Consultancy agencies offer expert advice, guidance, and solutions to businesses seeking improvement in specific areas such as management finance technology or operations. These agencies leverage their industry knowledge and experience to assist companies in optimizing processes.</p>
-							<p>A marketing agency is a dedicated entity that strategizes, plans, and executes marketing campaigns for businesses to enhance brand visibility, attract customers & drive sales. These agencies employ various tools and channels, including digital platforms, social media, content creation, and advertising.</p>
-
-							<div class="mb-30"></div>
-
-							<div class="row justify-content-center">
-								<div class="col-lg-12 col-xl-6">
-									<div class="services-single-item style-two">
-										<div class="d-sm-flex align-items-center">
-											<div class="flex-shrink-0">
-												<div class="icon">
-													<img src="assets/images/services-icon-1.svg" alt="services-icon">
-												</div>
-											</div>
-											<div class="flex-grow-1 ms-sm-3">
-												<h3>
-													<a href="#">Strategy Consulting</a>
-												</h3>
-												<p class="border-0 p-0 m-0">Expert guidance in formulating and growth plans.</p>
-											</div>
-										</div>
-										<ul class="ps-0 mb-0 list-unstyled border-top">
-											<li>Product Management</li>
-											<li>Financial Advisory</li>
-											<li>Product Strategy</li>
-										</ul>
-									</div>
-								</div>
-								<div class="col-lg-12 col-xl-6">
-									<div class="services-single-item style-two">
-										<div class="d-sm-flex align-items-center">
-											<div class="flex-shrink-0">
-												<div class="icon">
-													<img src="assets/images/services-icon-2.svg" alt="services-icon">
-												</div>
-											</div>
-											<div class="flex-grow-1 ms-sm-3">
-												<h3>
-													<a href="#">Digital Marketing</a>
-												</h3>
-												<p class="border-0 p-0 m-0">Expert guidance in formulating and growth plans.</p>
-											</div>
-										</div>
-										<ul class="ps-0 mb-0 list-unstyled border-top">
-											<li>Marketing Strategies</li>
-											<li>Business Development</li>
-											<li>Financial Advisory</li>
-										</ul>
-									</div>
-								</div>
-							</div>
-
-							<p>A marketing agency is a dedicated entity that strategizes, plans, and executes marketing campaigns for businesses to enhance brand visibility, attract customers & drive sales. These agencies employ various tools and channels, including digital platforms, social media, content creation, and advertising.</p>
-
-							<div class="mb-30 pb-md-4"></div>
-
-							<h2>Some Basic Questions</h2>
-
-							<div class="mb-30"></div>
-							
-							<div class="accordion accordion-content" id="accordionExample">
-								<div class="accordion-item">
-									<h2 class="accordion-header mb-0">
-										<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-											<span class="d-sm-flex align-items-center">
-												<span class="flex-shrink-0">
-													<span class="count">01</span>
-												</span>
-												<span class="flex-grow-1 mt-3 mt-sm-0">
-													<span>What is the difference between creative agency and marketing agency?</span>
-												</span>
-											</span>
-										</button>
-									</h2>
-									<div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
-										<div class="accordion-body">
-											<p>Your success is our priority. We measure our achievements by the success stories of our clients. Through seamless communication, meticulous attention to detail, and a passion for perfection, we strive to exceed your expectations.</p>
-										</div>
-									</div>
-								</div>
-								<div class="accordion-item">
-									<h2 class="accordion-header mb-0">
-										<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-											<span class="d-sm-flex align-items-center">
-												<span class="flex-shrink-0">
-													<span class="count">02</span>
-												</span>
-												<span class="flex-grow-1 mt-3 mt-sm-0">
-													<span>What is the difference between media and creative agency?</span>
-												</span>
-											</span>
-										</button>
-									</h2>
-									<div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-										<div class="accordion-body">
-											<p>Your success is our priority. We measure our achievements by the success stories of our clients. Through seamless communication, meticulous attention to detail, and a passion for perfection, we strive to exceed your expectations.</p>
-										</div>
-									</div>
-								</div>
-								<div class="accordion-item">
-									<h2 class="accordion-header mb-0">
-										<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-											<span class="d-sm-flex align-items-center">
-												<span class="flex-shrink-0">
-													<span class="count">03</span>
-												</span>
-												<span class="flex-grow-1 mt-3 mt-sm-0">
-													<span>What is the difference between media and creative agency?</span>
-												</span>
-											</span>
-										</button>
-									</h2>
-									<div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-										<div class="accordion-body">
-											<p>Your success is our priority. We measure our achievements by the success stories of our clients. Through seamless communication, meticulous attention to detail, and a passion for perfection, we strive to exceed your expectations.</p>
-										</div>
-									</div>
-								</div>
-								<div class="accordion-item">
-									<h2 class="accordion-header mb-0">
-										<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-											<span class="d-sm-flex align-items-center">
-												<span class="flex-shrink-0">
-													<span class="count">04</span>
-												</span>
-												<span class="flex-grow-1 mt-3 mt-sm-0">
-													<span>What is the difference between creative agency and studio?</span>
-												</span>
-											</span>
-										</button>
-									</h2>
-									<div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-										<div class="accordion-body">
-											<p>Your success is our priority. We measure our achievements by the success stories of our clients. Through seamless communication, meticulous attention to detail, and a passion for perfection, we strive to exceed your expectations.</p>
-										</div>
-									</div>
-								</div>
-								<div class="accordion-item">
-									<h2 class="accordion-header mb-0">
-										<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-											<span class="d-sm-flex align-items-center">
-												<span class="flex-shrink-0">
-													<span class="count">05</span>
-												</span>
-												<span class="flex-grow-1 mt-3 mt-sm-0">
-													<span>Who is responsible for the creative product of an agency?</span>
-												</span>
-											</span>
-										</button>
-									</h2>
-									<div id="collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-										<div class="accordion-body">
-											<p>Your success is our priority. We measure our achievements by the success stories of our clients. Through seamless communication, meticulous attention to detail, and a passion for perfection, we strive to exceed your expectations.</p>
-										</div>
-									</div>
-								</div>
-							</div>
+				<div class="row align-items-center">
+					<div class="col-lg-6">
+						<div class="sign-in-img">
+							<img src="assets/images/sign-up-img.png" alt="sign-up-img">
 						</div>
 					</div>
-					<div class="col-lg-4">
-						<div class="sidebar-widget mt-5 mt-lg-0">
-							<div class="mb-5">
-								<h3>Search Now</h3>
-								<form class="src-form position-relative">
-									<input type="text" class="form-control" placeholder="Search here.....">
-									<button type="submit" class="src-btn position-absolute top-50 end-0 translate-middle-y">
-										<i class="fa-regular fa-magnifying-glass"></i>
-									</button>
-								</form>
-							</div>
-							<div class="mb-5">
-								<h3>Service List</h3>
-								<ul class="ps-0 mb-0 list-unstyled service-list">
+					<div class="col-lg-6">
+						<div class="authentication-form">
+							<ul class="ps-0 list-unstyled d-flex authentication-nav">
+								<li>
+									<a href="sign-in.html">Sign In</a>
+								</li>
+								<li>
+									<a href="sign-up.html" class="active">Sing Up</a>
+								</li>
+							</ul>
+
+							<h3>Create account</h3>
+
+							<form>
+								<div class="form-group mb-4">
+									<input type="text" class="form-control" placeholder="Name">
+								</div>
+								<div class="form-group mb-4">
+									<input type="email" class="form-control" placeholder="Email">
+								</div>
+								<div class="form-group mb-4">
+									<div class="password-wrapper">
+										<input type="password" class="form-control" id="password" />
+										<i class="fa fa-eye-slash password-toggle-icon" aria-hidden="true"></i>
+									</div>
+								</div>
+								<!-- <div class="form-group mb-4">
+									<a href="#" class="forgot">Forgot your Password?</a>
+								</div> -->
+								<div class="form-group mb-4">
+									<div class="form-check">
+										<input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+										<label class="form-check-label" for="flexCheckDefault">
+											Agree to <a href="#">Terms & Conditions</a> and <a href="#">Privacy Policy</a>
+										</label>
+									</div>
+								</div>
+								<div class="form-group mb-4">
+									<button type="submit" class="main-btn">Sign In</button>
+								</div>
+								<p class="mb-4">Or register with an account</p>
+								<ul class="social-link ps-0 mb-0 list-unstyled">
 									<li>
 										<a href="#">
-											01 Strategy Consulting
+											<i class="fa-brands fa-apple"></i>
 										</a>
 									</li>
 									<li>
 										<a href="#">
-											02 Digital Marketing
+											<i class="fa-brands fa-github"></i>
 										</a>
 									</li>
 									<li>
 										<a href="#">
-											03 Web Development
+											<i class="fa-brands fa-google"></i>
 										</a>
 									</li>
 									<li>
 										<a href="#">
-											04 Creative Design
+											<i class="fa-brands fa-facebook-f"></i>
 										</a>
 									</li>
 									<li>
 										<a href="#">
-											05 Business Strategy
-										</a>
-									</li>
-									<li>
-										<a href="#">
-											06 Website Design
+											<i class="fa-brands fa-windows"></i>
 										</a>
 									</li>
 								</ul>
-							</div>
+							</form>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-		<!--=== End Services Area ===-->
+		<!--=== End Sign Up Area ===-->
 
 		<!--=== Start Footer Area ===-->
 		<div class="footer-area pt-100 pb-75 bg-color-030303">
@@ -590,6 +452,7 @@
 		<script src="assets/js/owl.carousel.min.js"></script>
         <script src="assets/js/scrollcue.js"></script>
         <script src="assets/js/magnific-popup.min.js"></script>
+        <script src="assets/js/mixitup.min.js"></script>
 		<script src="assets/js/custom.js"></script>
     </body>
 </html>
