--- a/contact-us.html
+++ b/contact-us.html
@@ -244,242 +244,132 @@
 		<div class="page-banner-area bg-black bg-img" data-background="./assets/images/banner-bg-shape.png">
 			<div class="container mw-1680">
 				<div class="page-banner-content">
-					<h2>Our Services Details</h2>
+					<h2>Contact Us</h2>
 					<ul class="ps-0 mb-0 list-unstyled justify-content-center page-breadcrumb d-flex flex-wrap gap-4">
 						<li>
 							<a href="#">Home</a>
 						</li>
 						<li>
-							<span class="active">Service Details</span>
+							<span class="active">Contact Us</span>
 						</li>
 					</ul>
 				</div>
 			</div>
 		</div>
 		<!--=== End Page Banner Area ===-->
-
-		<!--=== Start Services Area ===-->
-		<div class="service-details-area ptb-100">
+	
+		<!--=== Start Contact Us Area ===-->
+		<div class="contact-us-main-area ptb-100">
 			<div class="container">
-				<div class="row">
-					<div class="col-lg-8">
-						<div class="service-details-content">
-							<div class="service-details-img">
-								<img src="assets/images/services-img-1.jpg" alt="services-img">
-							</div>
-							<h2>Strategy Consulting</h2>
-							<p>Creating high-quality video content, including promotional videos tutorials and advertisements & utilizing them part of digital marketing campaigns across various platforms. Collaborating with influential individuals or personalities on social media to promote products/services and reach a wider audience.</p>
-							<p>Consultancy agencies offer expert advice, guidance, and solutions to businesses seeking improvement in specific areas such as management finance technology or operations. These agencies leverage their industry knowledge and experience to assist companies in optimizing processes.</p>
-							<p>A marketing agency is a dedicated entity that strategizes, plans, and executes marketing campaigns for businesses to enhance brand visibility, attract customers & drive sales. These agencies employ various tools and channels, including digital platforms, social media, content creation, and advertising.</p>
+				<div class="contact-us-main-form">
+					<h3>Sent A Message</h3>
 
-							<div class="mb-30"></div>
-
-							<div class="row justify-content-center">
-								<div class="col-lg-12 col-xl-6">
-									<div class="services-single-item style-two">
-										<div class="d-sm-flex align-items-center">
-											<div class="flex-shrink-0">
-												<div class="icon">
-													<img src="assets/images/services-icon-1.svg" alt="services-icon">
-												</div>
-											</div>
-											<div class="flex-grow-1 ms-sm-3">
-												<h3>
-													<a href="#">Strategy Consulting</a>
-												</h3>
-												<p class="border-0 p-0 m-0">Expert guidance in formulating and growth plans.</p>
-											</div>
+					<div class="row">
+						<div class="col-lg-8 col-xl-9">
+							<form>
+								<div class="row">
+									<div class="col-lg-6">
+										<div class="form-group mb-4">
+											<input type="text" class="form-control" placeholder="First Name">
 										</div>
-										<ul class="ps-0 mb-0 list-unstyled border-top">
-											<li>Product Management</li>
-											<li>Financial Advisory</li>
-											<li>Product Strategy</li>
-										</ul>
 									</div>
-								</div>
-								<div class="col-lg-12 col-xl-6">
-									<div class="services-single-item style-two">
-										<div class="d-sm-flex align-items-center">
-											<div class="flex-shrink-0">
-												<div class="icon">
-													<img src="assets/images/services-icon-2.svg" alt="services-icon">
-												</div>
-											</div>
-											<div class="flex-grow-1 ms-sm-3">
-												<h3>
-													<a href="#">Digital Marketing</a>
-												</h3>
-												<p class="border-0 p-0 m-0">Expert guidance in formulating and growth plans.</p>
+									<div class="col-lg-6">
+										<div class="form-group mb-4">
+											<input type="text" class="form-control" placeholder="Last Name">
+										</div>
+									</div>
+									<div class="col-lg-6">
+										<div class="form-group mb-4">
+											<input type="email" class="form-control" placeholder="Your Email">
+										</div>
+									</div>
+									<div class="col-lg-6">
+										<div class="form-group mb-4">
+											<input type="text" class="form-control" placeholder="Subject">
+										</div>
+									</div>
+									<div class="col-lg-12">
+										<div class="form-group mb-4">
+											<textarea class="form-control" placeholder="Write your message here..." cols="30" rows="5"></textarea>
+										</div>
+									</div>
+									<div class="col-lg-12">
+										<div class="form-group mb-4">
+											<div class="form-check">
+												<input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+												<label class="form-check-label" for="flexCheckDefault">
+													Save my name, email, and website in this browser for the next time I comment.
+												</label>
 											</div>
 										</div>
-										<ul class="ps-0 mb-0 list-unstyled border-top">
-											<li>Marketing Strategies</li>
-											<li>Business Development</li>
-											<li>Financial Advisory</li>
-										</ul>
 									</div>
-								</div>
-							</div>
-
-							<p>A marketing agency is a dedicated entity that strategizes, plans, and executes marketing campaigns for businesses to enhance brand visibility, attract customers & drive sales. These agencies employ various tools and channels, including digital platforms, social media, content creation, and advertising.</p>
-
-							<div class="mb-30 pb-md-4"></div>
-
-							<h2>Some Basic Questions</h2>
-
-							<div class="mb-30"></div>
-							
-							<div class="accordion accordion-content" id="accordionExample">
-								<div class="accordion-item">
-									<h2 class="accordion-header mb-0">
-										<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-											<span class="d-sm-flex align-items-center">
-												<span class="flex-shrink-0">
-													<span class="count">01</span>
-												</span>
-												<span class="flex-grow-1 mt-3 mt-sm-0">
-													<span>What is the difference between creative agency and marketing agency?</span>
-												</span>
-											</span>
-										</button>
-									</h2>
-									<div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
-										<div class="accordion-body">
-											<p>Your success is our priority. We measure our achievements by the success stories of our clients. Through seamless communication, meticulous attention to detail, and a passion for perfection, we strive to exceed your expectations.</p>
+									<div class="col-lg-12">
+										<div class="form-group mb-0">
+											<button class="main-btn" type="submit">Send A Message</button>
 										</div>
 									</div>
 								</div>
-								<div class="accordion-item">
-									<h2 class="accordion-header mb-0">
-										<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-											<span class="d-sm-flex align-items-center">
-												<span class="flex-shrink-0">
-													<span class="count">02</span>
-												</span>
-												<span class="flex-grow-1 mt-3 mt-sm-0">
-													<span>What is the difference between media and creative agency?</span>
-												</span>
-											</span>
-										</button>
-									</h2>
-									<div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-										<div class="accordion-body">
-											<p>Your success is our priority. We measure our achievements by the success stories of our clients. Through seamless communication, meticulous attention to detail, and a passion for perfection, we strive to exceed your expectations.</p>
-										</div>
-									</div>
-								</div>
-								<div class="accordion-item">
-									<h2 class="accordion-header mb-0">
-										<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-											<span class="d-sm-flex align-items-center">
-												<span class="flex-shrink-0">
-													<span class="count">03</span>
-												</span>
-												<span class="flex-grow-1 mt-3 mt-sm-0">
-													<span>What is the difference between media and creative agency?</span>
-												</span>
-											</span>
-										</button>
-									</h2>
-									<div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-										<div class="accordion-body">
-											<p>Your success is our priority. We measure our achievements by the success stories of our clients. Through seamless communication, meticulous attention to detail, and a passion for perfection, we strive to exceed your expectations.</p>
-										</div>
-									</div>
-								</div>
-								<div class="accordion-item">
-									<h2 class="accordion-header mb-0">
-										<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-											<span class="d-sm-flex align-items-center">
-												<span class="flex-shrink-0">
-													<span class="count">04</span>
-												</span>
-												<span class="flex-grow-1 mt-3 mt-sm-0">
-													<span>What is the difference between creative agency and studio?</span>
-												</span>
-											</span>
-										</button>
-									</h2>
-									<div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-										<div class="accordion-body">
-											<p>Your success is our priority. We measure our achievements by the success stories of our clients. Through seamless communication, meticulous attention to detail, and a passion for perfection, we strive to exceed your expectations.</p>
-										</div>
-									</div>
-								</div>
-								<div class="accordion-item">
-									<h2 class="accordion-header mb-0">
-										<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-											<span class="d-sm-flex align-items-center">
-												<span class="flex-shrink-0">
-													<span class="count">05</span>
-												</span>
-												<span class="flex-grow-1 mt-3 mt-sm-0">
-													<span>Who is responsible for the creative product of an agency?</span>
-												</span>
-											</span>
-										</button>
-									</h2>
-									<div id="collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-										<div class="accordion-body">
-											<p>Your success is our priority. We measure our achievements by the success stories of our clients. Through seamless communication, meticulous attention to detail, and a passion for perfection, we strive to exceed your expectations.</p>
-										</div>
-									</div>
-								</div>
-							</div>
+							</form>
 						</div>
-					</div>
-					<div class="col-lg-4">
-						<div class="sidebar-widget mt-5 mt-lg-0">
-							<div class="mb-5">
-								<h3>Search Now</h3>
-								<form class="src-form position-relative">
-									<input type="text" class="form-control" placeholder="Search here.....">
-									<button type="submit" class="src-btn position-absolute top-50 end-0 translate-middle-y">
-										<i class="fa-regular fa-magnifying-glass"></i>
-									</button>
-								</form>
-							</div>
-							<div class="mb-5">
-								<h3>Service List</h3>
-								<ul class="ps-0 mb-0 list-unstyled service-list">
+						<div class="col-lg-4 col-xl-3">
+							<div class="contact-info">
+								<h3>Find us Here</h3>
+								<ul class="ps-0 mb-0 list-unstyled info-list">
 									<li>
-										<a href="#">
-											01 Strategy Consulting
-										</a>
+										<span>Address:</span>
+										Australia Wise 9297 Maxim AV. Antonio, USA.
 									</li>
 									<li>
-										<a href="#">
-											02 Digital Marketing
-										</a>
+										<span>Phone:</span>
+										<a href="tel:+52883256953129">+5288 32569 53129</a>
 									</li>
 									<li>
-										<a href="#">
-											03 Web Development
-										</a>
+										<span>Phone:</span>
+										<a href="mailto:information@stir.com">information@stir.com</a>
 									</li>
 									<li>
-										<a href="#">
-											04 Creative Design
-										</a>
-									</li>
-									<li>
-										<a href="#">
-											05 Business Strategy
-										</a>
-									</li>
-									<li>
-										<a href="#">
-											06 Website Design
-										</a>
+										<span>Phone:</span>
+										<a href="mailto:information@stir.com">information@stir.com</a>
 									</li>
 								</ul>
+								<h3>Opening Hours:</h3>
+								<p>Mon to Sat: 9am - 10pm Sun: 10am - 6pm</p>
+
+								<div class="social-link d-flex">
+									<span>Social Media:</span>
+									<div class="d-flex gap-3">
+										<a href="#">
+											<i class="fa-brands fa-facebook-f"></i>
+										</a>
+										<a href="#">
+											<i class="fa-brands fa-twitter"></i>
+										</a>
+										<a href="#">
+											<i class="fa-brands fa-instagram"></i>
+										</a>
+										<a href="#">
+											<i class="fa-brands fa-pinterest-p"></i>
+										</a>
+										<a href="#">
+											<i class="fa-brands fa-linkedin-in"></i>
+										</a>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-		<!--=== End Services Area ===-->
+		<!--=== End Contact Us Area ===-->
+
+		<!--=== Start Map Area ===-->
+		<div class="map-area pb-100">
+			<div class="container">
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29733962.5709096!2d111.88697805211767!3d-24.532740314506096!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2b2bfd076787c5df%3A0x538267a1955b1352!2sAustralia!5e0!3m2!1sen!2sbd!4v1711220009595!5m2!1sen!2sbd" style="width: 100%; height: 600px; border: 0; display: block;"></iframe>
+			</div>
+		</div>
+		<!--=== End Map Area ===-->
 
 		<!--=== Start Footer Area ===-->
 		<div class="footer-area pt-100 pb-75 bg-color-030303">
@@ -590,6 +480,7 @@
 		<script src="assets/js/owl.carousel.min.js"></script>
         <script src="assets/js/scrollcue.js"></script>
         <script src="assets/js/magnific-popup.min.js"></script>
+        <script src="assets/js/mixitup.min.js"></script>
 		<script src="assets/js/custom.js"></script>
     </body>
 </html>
