--- a/index-2.html
+++ b/index-2.html
@@ -106,16 +106,16 @@
 										</li>
 										
 										<li class="nav-item">
-											<a href="privacy-policy.html" class="nav-link">Privacy Policy Page</a>
+											<a href="privacy-policy.html" class="nav-link">Privacy Policy</a>
 										</li>
 										<li class="nav-item">
-											<a href="terms-conditions.html" class="nav-link">Terms & Conditions Page</a>
+											<a href="terms-conditions.html" class="nav-link">Terms & Conditions</a>
 										</li>
 										<li class="nav-item">
-											<a href="404.html" class="nav-link">Error Page</a>
+											<a href="404.html" class="nav-link">Error</a>
 										</li>
 										<li class="nav-item">
-											<a href="coming-soon.html" class="nav-link">Coming Soon Page</a>
+											<a href="contact-us.html" class="nav-link">Contact Us</a>
 										</li>
 									</ul>
 								</li>
