--- a/product-details.html
+++ b/product-details.html
@@ -244,242 +244,50 @@
 		<div class="page-banner-area bg-black bg-img" data-background="./assets/images/banner-bg-shape.png">
 			<div class="container mw-1680">
 				<div class="page-banner-content">
-					<h2>Our Services Details</h2>
+					<h2>Product Details</h2>
 					<ul class="ps-0 mb-0 list-unstyled justify-content-center page-breadcrumb d-flex flex-wrap gap-4">
 						<li>
 							<a href="#">Home</a>
 						</li>
 						<li>
-							<span class="active">Service Details</span>
+							<span class="active">Product Details</span>
 						</li>
 					</ul>
 				</div>
 			</div>
 		</div>
 		<!--=== End Page Banner Area ===-->
-
-		<!--=== Start Services Area ===-->
-		<div class="service-details-area ptb-100">
+	
+		<!--=== Start Product Details Area ===-->
+		<div class="product-details-area ptb-100">
 			<div class="container">
 				<div class="row">
-					<div class="col-lg-8">
-						<div class="service-details-content">
-							<div class="service-details-img">
-								<img src="assets/images/services-img-1.jpg" alt="services-img">
-							</div>
-							<h2>Strategy Consulting</h2>
-							<p>Creating high-quality video content, including promotional videos tutorials and advertisements & utilizing them part of digital marketing campaigns across various platforms. Collaborating with influential individuals or personalities on social media to promote products/services and reach a wider audience.</p>
-							<p>Consultancy agencies offer expert advice, guidance, and solutions to businesses seeking improvement in specific areas such as management finance technology or operations. These agencies leverage their industry knowledge and experience to assist companies in optimizing processes.</p>
-							<p>A marketing agency is a dedicated entity that strategizes, plans, and executes marketing campaigns for businesses to enhance brand visibility, attract customers & drive sales. These agencies employ various tools and channels, including digital platforms, social media, content creation, and advertising.</p>
-
-							<div class="mb-30"></div>
-
-							<div class="row justify-content-center">
-								<div class="col-lg-12 col-xl-6">
-									<div class="services-single-item style-two">
-										<div class="d-sm-flex align-items-center">
-											<div class="flex-shrink-0">
-												<div class="icon">
-													<img src="assets/images/services-icon-1.svg" alt="services-icon">
-												</div>
-											</div>
-											<div class="flex-grow-1 ms-sm-3">
-												<h3>
-													<a href="#">Strategy Consulting</a>
-												</h3>
-												<p class="border-0 p-0 m-0">Expert guidance in formulating and growth plans.</p>
-											</div>
-										</div>
-										<ul class="ps-0 mb-0 list-unstyled border-top">
-											<li>Product Management</li>
-											<li>Financial Advisory</li>
-											<li>Product Strategy</li>
-										</ul>
-									</div>
-								</div>
-								<div class="col-lg-12 col-xl-6">
-									<div class="services-single-item style-two">
-										<div class="d-sm-flex align-items-center">
-											<div class="flex-shrink-0">
-												<div class="icon">
-													<img src="assets/images/services-icon-2.svg" alt="services-icon">
-												</div>
-											</div>
-											<div class="flex-grow-1 ms-sm-3">
-												<h3>
-													<a href="#">Digital Marketing</a>
-												</h3>
-												<p class="border-0 p-0 m-0">Expert guidance in formulating and growth plans.</p>
-											</div>
-										</div>
-										<ul class="ps-0 mb-0 list-unstyled border-top">
-											<li>Marketing Strategies</li>
-											<li>Business Development</li>
-											<li>Financial Advisory</li>
-										</ul>
-									</div>
-								</div>
-							</div>
-
-							<p>A marketing agency is a dedicated entity that strategizes, plans, and executes marketing campaigns for businesses to enhance brand visibility, attract customers & drive sales. These agencies employ various tools and channels, including digital platforms, social media, content creation, and advertising.</p>
-
-							<div class="mb-30 pb-md-4"></div>
-
-							<h2>Some Basic Questions</h2>
-
-							<div class="mb-30"></div>
-							
-							<div class="accordion accordion-content" id="accordionExample">
-								<div class="accordion-item">
-									<h2 class="accordion-header mb-0">
-										<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-											<span class="d-sm-flex align-items-center">
-												<span class="flex-shrink-0">
-													<span class="count">01</span>
-												</span>
-												<span class="flex-grow-1 mt-3 mt-sm-0">
-													<span>What is the difference between creative agency and marketing agency?</span>
-												</span>
-											</span>
-										</button>
-									</h2>
-									<div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
-										<div class="accordion-body">
-											<p>Your success is our priority. We measure our achievements by the success stories of our clients. Through seamless communication, meticulous attention to detail, and a passion for perfection, we strive to exceed your expectations.</p>
-										</div>
-									</div>
-								</div>
-								<div class="accordion-item">
-									<h2 class="accordion-header mb-0">
-										<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-											<span class="d-sm-flex align-items-center">
-												<span class="flex-shrink-0">
-													<span class="count">02</span>
-												</span>
-												<span class="flex-grow-1 mt-3 mt-sm-0">
-													<span>What is the difference between media and creative agency?</span>
-												</span>
-											</span>
-										</button>
-									</h2>
-									<div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-										<div class="accordion-body">
-											<p>Your success is our priority. We measure our achievements by the success stories of our clients. Through seamless communication, meticulous attention to detail, and a passion for perfection, we strive to exceed your expectations.</p>
-										</div>
-									</div>
-								</div>
-								<div class="accordion-item">
-									<h2 class="accordion-header mb-0">
-										<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-											<span class="d-sm-flex align-items-center">
-												<span class="flex-shrink-0">
-													<span class="count">03</span>
-												</span>
-												<span class="flex-grow-1 mt-3 mt-sm-0">
-													<span>What is the difference between media and creative agency?</span>
-												</span>
-											</span>
-										</button>
-									</h2>
-									<div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-										<div class="accordion-body">
-											<p>Your success is our priority. We measure our achievements by the success stories of our clients. Through seamless communication, meticulous attention to detail, and a passion for perfection, we strive to exceed your expectations.</p>
-										</div>
-									</div>
-								</div>
-								<div class="accordion-item">
-									<h2 class="accordion-header mb-0">
-										<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-											<span class="d-sm-flex align-items-center">
-												<span class="flex-shrink-0">
-													<span class="count">04</span>
-												</span>
-												<span class="flex-grow-1 mt-3 mt-sm-0">
-													<span>What is the difference between creative agency and studio?</span>
-												</span>
-											</span>
-										</button>
-									</h2>
-									<div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-										<div class="accordion-body">
-											<p>Your success is our priority. We measure our achievements by the success stories of our clients. Through seamless communication, meticulous attention to detail, and a passion for perfection, we strive to exceed your expectations.</p>
-										</div>
-									</div>
-								</div>
-								<div class="accordion-item">
-									<h2 class="accordion-header mb-0">
-										<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-											<span class="d-sm-flex align-items-center">
-												<span class="flex-shrink-0">
-													<span class="count">05</span>
-												</span>
-												<span class="flex-grow-1 mt-3 mt-sm-0">
-													<span>Who is responsible for the creative product of an agency?</span>
-												</span>
-											</span>
-										</button>
-									</h2>
-									<div id="collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-										<div class="accordion-body">
-											<p>Your success is our priority. We measure our achievements by the success stories of our clients. Through seamless communication, meticulous attention to detail, and a passion for perfection, we strive to exceed your expectations.</p>
-										</div>
-									</div>
-								</div>
-							</div>
+					<div class="col-lg-6">
+						<div class="product-details-img">
+							<img src="assets/images/product-details-img.jpg" alt="product-details-img">
 						</div>
 					</div>
-					<div class="col-lg-4">
-						<div class="sidebar-widget mt-5 mt-lg-0">
-							<div class="mb-5">
-								<h3>Search Now</h3>
-								<form class="src-form position-relative">
-									<input type="text" class="form-control" placeholder="Search here.....">
-									<button type="submit" class="src-btn position-absolute top-50 end-0 translate-middle-y">
-										<i class="fa-regular fa-magnifying-glass"></i>
-									</button>
-								</form>
+					<div class="col-lg-6">
+						<div class="product-details-content">
+							<h3>Wifi Router Very Latest Model</h3>
+							<span class="price"><del>$30.00</del>  $25.00</span>
+							<div class="d-flex align-items-center gap-1">
+								<i class="fa-solid fa-star"></i>
+								<i class="fa-solid fa-star"></i>
+								<i class="fa-solid fa-star"></i>
+								<i class="fa-solid fa-star"></i>
+								<i class="fa-regular fa-star"></i>
+								<span>(5)</span>
 							</div>
-							<div class="mb-5">
-								<h3>Service List</h3>
-								<ul class="ps-0 mb-0 list-unstyled service-list">
-									<li>
-										<a href="#">
-											01 Strategy Consulting
-										</a>
-									</li>
-									<li>
-										<a href="#">
-											02 Digital Marketing
-										</a>
-									</li>
-									<li>
-										<a href="#">
-											03 Web Development
-										</a>
-									</li>
-									<li>
-										<a href="#">
-											04 Creative Design
-										</a>
-									</li>
-									<li>
-										<a href="#">
-											05 Business Strategy
-										</a>
-									</li>
-									<li>
-										<a href="#">
-											06 Website Design
-										</a>
-									</li>
-								</ul>
-							</div>
+							<p>Fashion is an ever-evolving form of self-expression that transcends time & culture. It’s a dynamic art form that allows individuals to showcase their personality, creativity, & identity through clothing, accessories, & style choices.</p>
+							<span class="color">Color: White</span>
+							.
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-		<!--=== End Services Area ===-->
+		<!--=== End Product Details Area ===-->
 
 		<!--=== Start Footer Area ===-->
 		<div class="footer-area pt-100 pb-75 bg-color-030303">
@@ -590,6 +398,7 @@
 		<script src="assets/js/owl.carousel.min.js"></script>
         <script src="assets/js/scrollcue.js"></script>
         <script src="assets/js/magnific-popup.min.js"></script>
+        <script src="assets/js/mixitup.min.js"></script>
 		<script src="assets/js/custom.js"></script>
     </body>
 </html>
