--- a/index-2.html
+++ b/index-2.html
@@ -236,7 +236,7 @@
 							<h2>Delivering Unique Solutions for Success</h2>
 							<p>Welcome to Stir, where innovation meets strategy & excellence is our standard. As a premier business agency, Business agencies are specialized entities...</p>
 							<div class="d-flex align-items-center">
-								<a href="#" class="main-btn">
+								<a href="#" class="main-btn style-two">
 									<span>Learn More</span>
 									<i class="fa-regular fa-arrow-right"></i>
 								</a>
@@ -278,7 +278,7 @@
 							<p>Whether it's enhancing market visibility, improving operational efficiency, or implementing cutting-edge technologies, our agency offers a wide spectrum of services from strategic consulting</p>
 
 							<div class="d-flex align-items-center position-relative mt-40">
-								<a href="#" class="main-btn">
+								<a href="#" class="main-btn style-two">
 									Discover More
 									<i class="fa-solid fa-arrow-up-right"></i>
 								</a>
